--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@futureverse/asset-register": "latest",
-    "@futureverse/asset-register-react": "latest",
-    "@futureverse/auth-react": "latest",
+    "@futureverse/asset-register": "2.58.0",
+    "@futureverse/asset-register-react": "2.54.4",
+    "@futureverse/auth-react": "3.5.13",
     "@futureverse/auth-ui": "0.2.0-beta.5",
-    "@futureverse/transact": "latest",
-    "@futureverse/transact-react": "latest",
+    "@futureverse/transact": "0.5.1",
+    "@futureverse/transact-react": "0.1.3",
     "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-alert-dialog": "^1.1.2",
