--- a/.github/workflows/auto-label-goose_root.yml
+++ b/.github/workflows/auto-label-goose_root.yml
@@ -17,7 +17,7 @@ env:
 
 jobs:
    auto-label:
-      runs-on: self-hosted
+      runs-on: [self-hosted, linux, x64, root-devdapp]
       steps:
             - name: Check out repository
               uses: actions/checkout@v4
