--- a/.github/workflows/auto-label-goose_root.yml
+++ b/.github/workflows/auto-label-goose_root.yml
@@ -35,6 +35,7 @@ jobs:
                  git pull https://x-access-token:${{ secrets.PAT }}@github.com/DevDappcom/devdapp-bot.git
                  ls
                  echo $ISSUE_NUMBER
+                 echo $REPOSITORY
 
             - name: Run Goose with github extension
               run: |
