--- a/.github/workflows/auto-label-goose_root.yml
+++ b/.github/workflows/auto-label-goose_root.yml
@@ -40,4 +40,4 @@ jobs:
             - name: Run Goose with github extension
               run: |
                   source ~/.bashrc
-                  goose run --with-extension "GITHUB_PERSONAL_ACCESS_TOKEN=${{ secrets.PAT_DEVDAPPAI }} npx -y @modelcontextprotocol/server-github" --instructions $HOME/devdapp-bot/instructions.txt
+                  goose run --with-extension "GITHUB_PERSONAL_ACCESS_TOKEN=${{ secrets.PAT_DEVDAPPAI }} npx -y @modelcontextprotocol/server-github" --instructions $HOME/devdapp-bot/instruction-file/auto_label-root-devdapp.md
