--- a/.github/workflows/auto-label-goose_root.yml
+++ b/.github/workflows/auto-label-goose_root.yml
@@ -41,7 +41,14 @@ jobs:
                  # echo $ISSUE_NUMBER > $HOME/issue_no.txt
                  # echo $REPOSITORY
 
-            - name: Run Goose with github extension
+            - name: Run Goose with github extension  for Issues
+              if: github.event_name != 'pull_request'
               run: |
                   source ~/.bashrc
                   goose run --with-builtin "developer,computercontroller,memory" --with-extension "GITHUB_PERSONAL_ACCESS_TOKEN=${{ secrets.PAT_DEVDAPPAI }} npx -y @modelcontextprotocol/server-github" --instructions $HOME/devdapp-bot/instruction-file/auto_label_test.md
+            
+            - name: Run Goose with github extension  for Pull Requests
+              if: github.event_name == 'pull_request'
+              run: |
+                  source ~/.bashrc
+                  goose run --with-builtin "developer,computercontroller,memory" --with-extension "GITHUB_PERSONAL_ACCESS_TOKEN=${{ secrets.PAT_DEVDAPPAI }} npx -y @modelcontextprotocol/server-github" --instructions $HOME/devdapp-bot/instruction-file/auto_label_test2.md
