--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-VITE_NETWORK=porcini
+VITE_NETWORK=porcini2
 VITE_PASS_CLIENT_ID=LYobSFOp-JzEqDaWLsiRr
 VITE_WALLET_CONNECT_PROJECT_ID=d505b8bb1aab401718852376ee0f9808
